--- a/Uhome/Classes/Module/ProjectHouses/View/HouseTableViewCell.xib
+++ b/Uhome/Classes/Module/ProjectHouses/View/HouseTableViewCell.xib
@@ -1,19 +1,96 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16D30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="HouseTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="KGk-i7-Jjw" customClass="HouseTableViewCell" customModule="Uhome" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Gh-CP-2Rw">
+                        <rect key="frame" x="10" y="10" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="DoI-xy-RVC"/>
+                            <constraint firstAttribute="width" constant="100" id="nyK-zg-yZD"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYI-1Y-NQL">
+                        <rect key="frame" x="118" y="8" width="194" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ek0-Cy-wUO">
+                        <rect key="frame" x="118" y="37.5" width="194" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQe-ew-KGR">
+                        <rect key="frame" x="248" y="90.5" width="64" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="64" id="AOF-6P-TKi"/>
+                            <constraint firstAttribute="height" constant="21" id="uEC-c7-bZz"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7td-8t-oIh">
+                        <rect key="frame" x="118" y="94.5" width="122" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_tab_home_selected" translatesAutoresizingMaskIntoConstraints="NO" id="NGf-ep-2eU">
+                        <rect key="frame" x="118" y="66.5" width="24" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="So9-Qd-5pG"/>
+                            <constraint firstAttribute="width" constant="24" id="rl4-3d-qga"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="fQe-ew-KGR" firstAttribute="leading" secondItem="7td-8t-oIh" secondAttribute="trailing" constant="8" id="1Ab-xe-367"/>
+                    <constraint firstItem="7td-8t-oIh" firstAttribute="top" secondItem="NGf-ep-2eU" secondAttribute="bottom" constant="4" id="5i1-cT-2s5"/>
+                    <constraint firstItem="qYI-1Y-NQL" firstAttribute="leading" secondItem="8Gh-CP-2Rw" secondAttribute="trailing" constant="8" id="6wT-78-pfh"/>
+                    <constraint firstItem="7td-8t-oIh" firstAttribute="leading" secondItem="8Gh-CP-2Rw" secondAttribute="trailing" constant="8" id="9QO-6z-Zbn"/>
+                    <constraint firstItem="7td-8t-oIh" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="B5h-jc-D4H"/>
+                    <constraint firstItem="8Gh-CP-2Rw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="DNG-ci-dPh"/>
+                    <constraint firstItem="NGf-ep-2eU" firstAttribute="leading" secondItem="8Gh-CP-2Rw" secondAttribute="trailing" constant="8" id="Op0-kh-36s"/>
+                    <constraint firstItem="ek0-Cy-wUO" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Tng-hH-km2"/>
+                    <constraint firstItem="qYI-1Y-NQL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="XVz-1C-nNG"/>
+                    <constraint firstItem="fQe-ew-KGR" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="ZPw-GF-Z20"/>
+                    <constraint firstItem="qYI-1Y-NQL" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="cLL-t7-Z7P"/>
+                    <constraint firstItem="ek0-Cy-wUO" firstAttribute="top" secondItem="qYI-1Y-NQL" secondAttribute="bottom" constant="10" id="gwx-Gr-sp9"/>
+                    <constraint firstItem="ek0-Cy-wUO" firstAttribute="leading" secondItem="8Gh-CP-2Rw" secondAttribute="trailing" constant="8" id="j2U-MY-jN8"/>
+                    <constraint firstItem="8Gh-CP-2Rw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="pEL-C7-OGC"/>
+                    <constraint firstItem="fQe-ew-KGR" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="rGF-75-bqy"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="conditionLabel" destination="ek0-Cy-wUO" id="yT7-cd-21A"/>
+                <outlet property="customerImpressionLabel" destination="7td-8t-oIh" id="iz8-qq-uUC"/>
+                <outlet property="giftImageView" destination="NGf-ep-2eU" id="vRr-LD-01n"/>
+                <outlet property="houseImageView" destination="8Gh-CP-2Rw" id="yDJ-Cy-Ag3"/>
+                <outlet property="nameLabel" destination="qYI-1Y-NQL" id="qaK-wr-Ybr"/>
+                <outlet property="priceLabel" destination="fQe-ew-KGR" id="psm-qk-e4r"/>
+            </connections>
+            <point key="canvasLocation" x="-454" y="120"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ic_tab_home_selected" width="25" height="25"/>
+    </resources>
 </document>
